--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
             <version>2.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
